<resources>
    <string name="app_name">Learn English</string>
    <string name="title_home">Categories</string>
    <string name="title_favorite">Arbitrary</string>
    <string name="title_notifications">Notifications</string>
    <string name="video_thumbnail">Video thumbnail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pages">#/$</string>
    <string name="random_videos">Arbitrary</string>
    <string name="title_practice">Practice</string>
    <string name="default_audio">Default Audio</string>
    <string name="your_audio">Your Audio</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
</resources>