<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aforeapps.learnenglish.views.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.aforeapps.learnenglish.views.fragments.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.aforeapps.learnenglish.views.fragments.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_random_player_fragment"
        android:name="com.aforeapps.learnenglish.views.fragments.PlayerFragment"
        android:label="@string/random_videos"
        tools:layout="@layout/fragment_player" />

    <fragment
        android:id="@+id/navigation_player_fragment"
        android:name="com.aforeapps.learnenglish.views.fragments.PlayerFragment"
        android:label=""
        tools:layout="@layout/fragment_player" />

    <fragment
        android:id="@+id/navigation_video_list_fragment"
        android:name="com.aforeapps.learnenglish.views.fragments.VideoListFragment"
        android:label=""
        tools:layout="@layout/fragment_video_list" />

    <fragment
        android:id="@+id/navigation_sub_category_fragment"
        android:name="com.aforeapps.learnenglish.views.fragments.SubCategoryFragment"
        android:label=""
        tools:layout="@layout/fragment_sub_category" />


</navigation>