<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@drawable/border_shape_round_grey"
    android:paddingStart="15dp"
    android:paddingTop="15dp"
    android:paddingEnd="15dp"
    android:paddingBottom="15dp">

    <TextView
        android:id="@+id/tv_first_sentence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="6"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Hello! World" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/default_audio"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tv_first_sentence"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_sentence" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_audio"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/checkBox1"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

    <Button
        android:id="@+id/btn_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/record"
        app:layout_constraintEnd_toStartOf="@+id/btn_play"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <ImageButton
        android:id="@+id/btn_play"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        app:tint="@color/grey"
        android:src="@drawable/ic_baseline_play_24"
        app:layout_constraintBottom_toBottomOf="@+id/btn_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_record"
        app:layout_constraintEnd_toStartOf="@+id/btn_record"
        app:layout_constraintTop_toTopOf="@+id/btn_record" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_record"
        app:layout_constraintEnd_toStartOf="@+id/btn_record"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_record" />

</androidx.constraintlayout.widget.ConstraintLayout>